Awards title too large on mobile, scrolling issues; fixed

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,12 @@ li.partner{text-align:left;list-style-type:none;font-family:Roboto;font-size:18p
 
 /*Paragraph Styling*/
 #awards-header{font-weight:bolder;color:#181d46;font-size:40px;padding:10px 0 10px 0;font-family: 'Abril Fatface', cursive;}
-.awards-title {font-family: 'Abril Fatface', cursive; font-size:60px;}
+.awards-title {font-family: 'Abril Fatface', cursive;}
+@media only screen and (min-width : 1000px) {
+    .awards-title {
+        font-size: 3.5em;
+    }
+}
 #awards-subheader{font-weight:600;color:#181d46;font-size:30px;padding:10px 0 10px 0;font-family:Barlow; text-transform: uppercase;}
 
 #prehacks-header{font-weight:bolder;color:#181d46;font-size:28px;padding:10px 0 10px 0;font-family:Barlow}
